# syng

./: Cargo.toml
src/: main.rs
src/objects/: mod.rs
syng-core/src/: lib.rs
syng-core/src/backend/: mod.rs  test_backend.rs
syng-core/src/delta/: mod.rs
syng-core/src/objects/: mod.rs
syng-core/src/tree_ops/: mod.rs
syng-demo/: Cargo.toml
syng-demo-backend/: Cargo.toml
syng-demo-backend/src/: main.rs
syng-demo-common/: Cargo.toml
syng-demo-common/src/: backend.rs  lib.rs
syng-demo/src/: main.rs  style.css
syng-demo/src/components/: dialogs.rs  mod.rs  sync_state_dialog.rs
syng-demo/src/data/: mod.rs
syng-demo/src/remote/: mod.rs
syng-demo/src/sync/: backend.rs  mod.rs  treegen.rs
syng-demo/src/utils/: mod.rs
