[package]
name = "syng-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syng = { path = "../syng-core/" }
ciborium = "0.2.0"
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
random-string = "1.0.0"
serde = "1.0.160"
serde_json = "1.0.96"
